Finished implementing JoinerFormat feature.